--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
-  <version>1.6.3</version>
+  <version>1.6.3-snapshots</version>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -85,8 +85,8 @@
 
     <distributionManagement>
     <snapshotRepository>
-      <id>java-maven-app-SNAPSHOTS</id>
-      <url>http://172.31.44.81:8081/repository/java-maven-app-SNAPSHOTS/</url>
+      <id>java-maven-app-snapshots</id>
+      <url>http://172.31.44.81:8081/repository/java-maven-app-snapshots/</url>
     </snapshotRepository>
     <repository>
       <id>java-maven-app-release</id>
